--- a/downloads.html
+++ b/downloads.html
@@ -54,10 +54,11 @@
                 <div style="display: flex; gap: 40px; margin-top: 40px; align-items: flex-start; flex-wrap: wrap;">
                     <div style="flex: 1; min-width: 300px;">
                         <h2 style="margin-top: 0;">Linux</h2>
-                        <p>The latest stable version is <strong>0.0.1</strong>.</p>
+                        <p>The latest stable version is <strong>0.1.1</strong>.</p>
                         <div style="margin-top: 20px;">
-                            <a href="https://launchpad.net/~fluxlinux/+archive/ubuntu/fluxvcs" target="_blank"
-                                class="btn btn-primary" style="color: white; text-decoration: none;">Download for
+                            <a href="https://www.dropbox.com/scl/fi/81kj0kjsucwgemm5cs545/flux-vcs_0.1.1-1_amd64.deb?rlkey=6ahtxbp5f0hfgu6y4gjg6ueqm&st=wudp3thu&dl=1"
+                                target="_blank" class="btn btn-primary"
+                                style="color: white; text-decoration: none;">Download for
                                 Linux</a>
                         </div>
                     </div>
