--- a/downloads.html
+++ b/downloads.html
@@ -57,7 +57,7 @@
                         <p>The latest stable version is <strong>0.1.1</strong>.</p>
                         <div style="margin-top: 20px;">
                             <a href="https://www.dropbox.com/scl/fi/81kj0kjsucwgemm5cs545/flux-vcs_0.1.1-1_amd64.deb?rlkey=6ahtxbp5f0hfgu6y4gjg6ueqm&st=wudp3thu&dl=1"
-                                target="_blank" class="btn btn-primary"
+                                target="_blank" class="btn btn-primary" id="linux-download-btn"
                                 style="color: white; text-decoration: none;">Download for
                                 Linux</a>
                         </div>
