--- a/index.html
+++ b/index.html
@@ -51,6 +51,11 @@
     </div>
   </header>
 
+  <div class="download-banner">
+    Count of developers who are using FluxVCS: <span id="download-count" class="count">...</span> (Number will be low
+    since it was just released)
+  </div>
+
   <main>
     <section class="hero">
       <div class="container">
@@ -59,7 +64,7 @@
           <p class="hero-lead">FluxVCS is a free and open source distributed version control system designed to handle
             everything from small to very large projects with speed and efficiency.</p>
           <div class="cta-group">
-            <a href="/downloads.html" class="btn btn-primary">Download for Linux</a>
+            <a href="/downloads.html" class="btn btn-primary" id="home-download-btn">Download for Linux</a>
             <span class="version-info">v0.1.1 &bull; Release Notes</span>
           </div>
         </div>
