--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <!-- SEO & OpenGraph -->
   <title>FluxVCS - Distributed Is The New Centralized</title>
   <meta name="description"
-    content="FluxVCS is a free and open source distributed version control system designed to handle everything from small to very large projects with speed and efficiency.">
+    content="FluxVCS reimagines distributed version control, fixing the architectural mistakes of the past to deliver a faster, simpler, and more robust experience.">
   <meta name="keywords" content="fluxvcs, version control, git alternative, distributed vcs, open source, fluxlinux">
   <link rel="canonical" href="https://vcs.fluxlinux.xyz/" />
 
@@ -51,18 +51,14 @@
     </div>
   </header>
 
-  <div class="download-banner">
-    Count of developers who are using FluxVCS: <span id="download-count" class="count">...</span> (Number will be low
-    since it was just released)
-  </div>
-
   <main>
     <section class="hero">
       <div class="container">
         <div class="hero-content">
           <h1>--distributed-is-the-new-centralized</h1>
-          <p class="hero-lead">FluxVCS is a free and open source distributed version control system designed to handle
-            everything from small to very large projects with speed and efficiency.</p>
+          <p class="hero-lead">FluxVCS reimagines distributed version control, fixing the architectural mistakes of the
+            past
+            to deliver a faster, simpler, and more robust experience.</p>
           <div class="cta-group">
             <a href="/downloads.html" class="btn btn-primary" id="home-download-btn">Download for Linux</a>
             <span class="version-info">v0.1.1 &bull; Release Notes</span>
